--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/react-dom": "^18.2.14",
     "@unform/core": "2.0.0",
     "@unform/web": "2.0.0",
+    "apexcharts": "^3.50.0",
     "axios": "0.19.2",
     "date-fns": "^3.3.1",
     "polished": "3.5.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-day-picker": "^7.4.8",
     "react-dom": "^18.2.0",
     "react-icons": "3.9.0",
