--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
@@ -15,6 +16,7 @@
     "apexcharts": "^3.50.0",
     "axios": "0.19.2",
     "date-fns": "^3.3.1",
+    "lodash": "^4.17.21",
     "polished": "3.5.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
